--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Masters</title>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="assests/styles/style.css">
 </head>
 
@@ -43,11 +47,25 @@
 
 
   <!-- main section of website -->
-  <!-- <main>
-    <section></section>
-    <section></section>
-    <section></section>
-  </main> -->
+  <main class="container">
+
+    <section class="section-hero">
+
+      <div class="image-slider">
+        <img src="assests/graphics/hero-images/slide1.png" alt="slide 1">
+      </div>
+      <div class="text-box">
+        <h1>
+          <span>Tech Masters</span>
+          <span>Studio</span>
+        </h1>
+        <p>Crafting Tomorrow's Technology Today</p>
+
+        <a href="#">Schedule A Call <i class="fa-solid fa-phone-flip"></i></a>
+      </div>
+
+    </section>
+  </main>
 
   <!-- footer -->
   <!-- <footer></footer> -->
