--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   <!-- main section of website -->
   <main class="container">
 
+    <!-- section hero -->
     <section class="section-hero">
-
       <div class="image-slider">
-        <img src="assests/graphics/hero-images/slide1.png" alt="slide 1">
+        <img class="slider-image" src="assests/graphics/hero-images/slide1.png" alt="slide 1">
       </div>
       <div class="text-box">
         <h1>
@@ -60,8 +60,126 @@
           <span>Studio</span>
         </h1>
         <p>Crafting Tomorrow's Technology Today</p>
-
         <a href="#">Schedule A Call <i class="fa-solid fa-phone-flip"></i></a>
+      </div>
+
+    </section>
+
+
+    <!-- section about us -->
+
+    <section class="section-about-us">
+      <h2>About Us</h2>
+
+      <div class="about-text">
+        <p>
+          Welcome to Tech Masters Studio! As a premier provider of technology services, we offer diverse solutions to
+          elevate
+          your digital presence. Our team excels in crafting <span>dynamic websites</span>, top-notch <span>web
+            development</span>,
+          and <span>design</span>. We bring your vision to life with captivating <span>graphic design</span> for
+          branding
+          that stands out. Additionally, we skillfully transform raw footage into compelling stories through <span>video
+            editing</span>.
+          Our commitment is to empower your business with cutting-edge solutions. Choose Tech Masters Studio for a
+          journey into
+          the future of <span>digital excellence</span>.
+        </p>
+
+        <div class="more-info">
+          <a class="info-btn" href="#">Our Team &rarr;</a>
+
+          <div class="faces">
+            <img src="assests/graphics/about-us/ben.jpg" alt="face-1">
+            <img src="assests/graphics/about-us/customer-1.jpg" alt="face-1">
+            <img src="assests/graphics/about-us/customer-2.jpg" alt="face-1">
+            <img src="assests/graphics/about-us/steve.jpg" alt="face-1">
+          </div>
+        </div>
+
+        <div class="socials">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- section services -->
+    <section class="section-services">
+      <h2>Our Services</h2>
+
+      <div class="cards">
+        <div class="card-img">
+          <img src="assests/graphics/services/web-dev.jpg" alt="web-developer">
+        </div>
+        <div class=" card-details">
+          <h3>Web Development</h3>
+          <p>Tech Masters Studio: Crafting modern, responsive websites to elevate your online presence.</p>
+          <a href="#">Try Service</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="card-img">
+          <img src="assests/graphics/services/app-Dev.jpg" alt="web-developer">
+        </div>
+        <div class=" card-details">
+          <h3>App Development</h3>
+          <p>Tech Masters Studio transforms ideas into powerful mobile apps for your digital success.</p>
+          <a href="#">Try Service</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="card-img">
+          <img src="assests/graphics/services/video-editing.jpg" alt="web-developer">
+        </div>
+        <div class=" card-details">
+          <h3>Video Editing</h3>
+          <p>Tech Masters Studio refines your story with expert video editing, bringing creativity and precision to
+            every frame.</p>
+          <a href="#">Try Service</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="card-img">
+          <img src="assests/graphics/services/graphic-design.jpg" alt="web-developer">
+        </div>
+        <div class=" card-details">
+          <h3>Graphic Design</h3>
+          <p>Tech Masters Studio where creativity meets strategy in every pixel, delivering standout graphic designs for
+            your brand.</p>
+          <a href="#">Try Service</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="card-img">
+          <img src="assests/graphics/services/web-design.jpg" alt="web-developer">
+        </div>
+        <div class=" card-details">
+          <h3>Web Design</h3>
+          <p>Tech Masters Studio crafts captivating web designs that blend aesthetics with functionality, enhancing your
+            online presence.</p>
+          <a href="#">Try Service</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="card-img">
+          <img src="assests/graphics/services/ui-ux-design.jpg" alt="web-developer">
+        </div>
+        <div class=" card-details">
+          <h3>UI/UX Design</h3>
+          <p>Tech Masters Studio redefines user experiences through seamless UI/UX design, marrying form and function
+            for digital excellence.
+          </p>
+          <a href="#">Try Service</a>
+        </div>
       </div>
 
     </section>
