--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
 
       <div class="footer-quick-links">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Hire Us</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#hire-us">Hire Us</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
