--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link rel="stylesheet" href="assests/styles/style.css">
+  <link rel="stylesheet" href="public/assests/styles/style.css">
+  <link class="fav-icon" rel="shortcut icon" href="public/assests/graphics/fav-icon/tmsFavIcon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -22,20 +23,20 @@
 
     <nav class="navigation">
       <ul class="desktop-nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Hire Us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about-us">About Us</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#hire-us">Hire Us</a></li>
+        <li><a href="#footer">Contact Us</a></li>
       </ul>
 
       <div class="menu-nav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Hire Us</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#hire-us">Hire Us</a></li>
+          <li><a href="#footer">Contact Us</a></li>
         </ul>
       </div>
 
@@ -50,9 +51,9 @@
   <main class="container">
 
     <!-- section hero -->
-    <section class="section-hero">
+    <section id="home" class="section-hero">
       <div class="image-slider">
-        <img class="slider-image" src="assests/graphics/hero-images/slide1.png" alt="slide 1">
+        <img class="slider-image" src="public/assests/graphics/hero-images/slide1.png" alt="slide 1">
       </div>
       <div class="text-box">
         <h1>
@@ -60,7 +61,7 @@
           <span>Studio</span>
         </h1>
         <p>Crafting Tomorrow's Technology Today</p>
-        <a href="#">Schedule A Call <i class="fa-solid fa-phone-flip"></i></a>
+        <a href="tel:6376-769-600">Make a Call now<i class="fa-solid fa-phone-flip"></i></a>
       </div>
 
     </section>
@@ -68,7 +69,7 @@
 
     <!-- section about us -->
 
-    <section class="section-about-us">
+    <section id="about-us" class="section-about-us">
       <h2>About Us</h2>
 
       <div class="about-text">
@@ -90,106 +91,283 @@
           <a class="info-btn" href="#">Our Team &rarr;</a>
 
           <div class="faces">
-            <img src="assests/graphics/about-us/ben.jpg" alt="face-1">
-            <img src="assests/graphics/about-us/customer-1.jpg" alt="face-1">
-            <img src="assests/graphics/about-us/customer-2.jpg" alt="face-1">
-            <img src="assests/graphics/about-us/steve.jpg" alt="face-1">
+            <img src="public/assests/graphics/about-us/mazahir.jpg" alt="mazahir">
+            <img src="public/assests/graphics/about-us/kaif.jpg" alt="kaif">
+            <img src="public/assests/graphics/about-us/mohit.jpg" alt="mohit">
+            <img src="public/assests/graphics/about-us/nitesh.jpg" alt="nitesh">
           </div>
         </div>
 
         <div class="socials">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61554491229514" target="_blank"><i
+              class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.instagram.com/techmasterstudio" target="_blank"><i
+              class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/techmastersstudio" target="_blank"><i
+              class="fa-brands fa-linkedin"></i></a>
+          <a href="https://x.com/techmasterstdio?s=20" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
     </section>
 
 
     <!-- section services -->
-    <section class="section-services">
+    <section id="services" class="section-services">
       <h2>Our Services</h2>
 
       <div class="cards">
         <div class="card-img">
-          <img src="assests/graphics/services/web-dev.jpg" alt="web-developer">
+          <img src="public/assests/graphics/services/web-dev.jpg" alt="web-developer">
         </div>
         <div class=" card-details">
           <h3>Web Development</h3>
           <p>Tech Masters Studio: Crafting modern, responsive websites to elevate your online presence.</p>
-          <a href="#">Try Service</a>
+          <a href="#hire-us">Try Service</a>
         </div>
       </div>
 
       <div class="cards">
         <div class="card-img">
-          <img src="assests/graphics/services/app-Dev.jpg" alt="web-developer">
+          <img src="public/assests/graphics/services/app-Dev.jpg" alt="web-developer">
         </div>
         <div class=" card-details">
           <h3>App Development</h3>
           <p>Tech Masters Studio transforms ideas into powerful mobile apps for your digital success.</p>
-          <a href="#">Try Service</a>
+          <a href="#hire-us">Try Service</a>
         </div>
       </div>
 
       <div class="cards">
         <div class="card-img">
-          <img src="assests/graphics/services/video-editing.jpg" alt="web-developer">
+          <img src="public/assests/graphics/services/video-editing.jpg" alt="web-developer">
         </div>
         <div class=" card-details">
           <h3>Video Editing</h3>
           <p>Tech Masters Studio refines your story with expert video editing, bringing creativity and precision to
             every frame.</p>
-          <a href="#">Try Service</a>
+          <a href="#hire-us">Try Service</a>
         </div>
       </div>
 
       <div class="cards">
         <div class="card-img">
-          <img src="assests/graphics/services/graphic-design.jpg" alt="web-developer">
+          <img src="public/assests/graphics/services/graphic-design.jpg" alt="web-developer">
         </div>
         <div class=" card-details">
           <h3>Graphic Design</h3>
           <p>Tech Masters Studio where creativity meets strategy in every pixel, delivering standout graphic designs for
             your brand.</p>
-          <a href="#">Try Service</a>
+          <a href="#hire-us">Try Service</a>
         </div>
       </div>
 
       <div class="cards">
         <div class="card-img">
-          <img src="assests/graphics/services/web-design.jpg" alt="web-developer">
+          <img src="public/assests/graphics/services/web-design.jpg" alt="web-developer">
         </div>
         <div class=" card-details">
           <h3>Web Design</h3>
           <p>Tech Masters Studio crafts captivating web designs that blend aesthetics with functionality, enhancing your
             online presence.</p>
-          <a href="#">Try Service</a>
+          <a href="#hire-us">Try Service</a>
         </div>
       </div>
 
       <div class="cards">
         <div class="card-img">
-          <img src="assests/graphics/services/ui-ux-design.jpg" alt="web-developer">
+          <img src="public/assests/graphics/services/ui-ux-design.jpg" alt="web-developer">
         </div>
         <div class=" card-details">
           <h3>UI/UX Design</h3>
           <p>Tech Masters Studio redefines user experiences through seamless UI/UX design, marrying form and function
             for digital excellence.
           </p>
-          <a href="#">Try Service</a>
+          <a href="#hire-us">Try Service</a>
         </div>
       </div>
 
     </section>
+
+
+    <!-- section hire-us -->
+
+    <section id="hire-us" class="hire-us">
+      <h2>Hire Us</h2>
+
+      <form class="form">
+
+        <h3>Build a strong Online Identity</h3>
+        <div class="full-name">
+          <input type="text" id="full-name" name="fullName" required placeholder=" ">
+          <label for="full-name"><span>Full&nbsp;Name</span></label>
+        </div>
+
+        <div class="phone">
+          <input type="tel" id="phone" name="phoneNum" required placeholder=" ">
+          <label for="phone"><span>Phone&nbsp;Number</span></label>
+        </div>
+
+        <div class="email">
+          <input type="email" id="email" name="email" placeholder=" " required>
+          <label for="email"><span>Email</span></label>
+        </div>
+
+        <div class="book-services">
+          <select name="service" id="services-requested" required>
+            <option disabled selected>select service</option>
+            <option value="Web-Development">Web Development</option>
+            <option value="Web-Design">Web Design</option>
+            <option value="App-Development">App Development</option>
+            <option value="Graphic-Design">Graphic Design</option>
+            <option value="UI/UX-Design">UI/UX Design</option>
+            <option value="Video-Editing">Video Editing</option>
+          </select>
+        </div>
+
+        <div class="submit">
+          <input type="submit" value="Book Now">
+          <i class="fa-solid fa-paper-plane"></i>
+        </div>
+      </form>
+
+      <div class="form-img"></div>
+
+    </section>
+
+
+    <!-- section hire-us -->
+
+    <section class="testimonials">
+
+      <h2>Testimonials</h2>
+
+      <div class="stories">
+
+        <!-- testimonial 1 -->
+        <div class="story-panel">
+
+          <figure class="story-img">
+            <img src="public/assests/graphics/Testimonials/testimonial1.jpg" alt="testimonial-img">
+
+            <figcaption class="story-name">Rishi Sen</figcaption>
+          </figure>
+
+
+          <div class="testimonial-text">
+            <p>TechMasters Studio nailed our web development needs. Their team delivered a user-friendly and innovative
+              website, exceeding our expectations. Highly recommended for efficient and top-notch service!</p>
+
+            <div class="rating rating-1">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- testimonial 2 -->
+        <div class="story-panel">
+
+          <figure class="story-img">
+            <img src="public/assests/graphics/Testimonials/testimonial2.jpg" alt="testimonial-img">
+
+            <figcaption class="story-name">Adnan Hussain</figcaption>
+          </figure>
+
+
+          <div class="testimonial-text">
+            <p>There graphic design service is fantastic. They're creative, detail-oriented, and deliver standout
+              results. Highly recommended!</p>
+
+            <div class="rating rating-2">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- testimonial 3 -->
+        <div class="story-panel">
+
+          <figure class="story-img">
+            <img src="public/assests/graphics/Testimonials/testimonial3.jpg" alt="testimonial-img">
+
+            <figcaption class="story-name">Himanshu Sen</figcaption>
+          </figure>
+
+
+          <div class="testimonial-text">
+            <p>TechMasters Studio's editing expertise rescued our studio during staff shortages, saving time and
+              enhancing content quality. They're now our trusted choice for top-notch video editing.</p>
+
+            <div class="rating rating-3">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
   </main>
 
   <!-- footer -->
-  <!-- <footer></footer> -->
+  <footer id="footer" class="footer">
 
 
-  <script src="assests/javascript/script.js"></script>
+    <h4>Contact Us:</h4>
+
+    <div class="footer-contact">
+      <a href="mailto:techmastersstudio@gmail.com">techmastersstudio@gmail.com</a>
+      <a href="tel:6376-769-600">6376-769-600</a>
+    </div>
+
+    <h4>Follow Us:</h4>
+
+    <div class="footer-socials">
+      <a href="https://www.facebook.com/profile.php?id=61554491229514" target="_blank"><i
+          class="fa-brands fa-facebook"></i></a>
+      <a href="https://www.instagram.com/techmasterstudio" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/techmastersstudio" target="_blank"><i
+          class="fa-brands fa-linkedin"></i></a>
+      <a href="https://x.com/techmasterstdio?s=20" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+    </div>
+
+    <div class="web-links">
+      <a href="#home">Home</a>
+      <a href="#about-us">About Us</a>
+      <a href="#services">Services</a>
+      <a href="#hire-us">Hire Us</a>
+      <a href="mailto:techmastersstudio@gmail.com">Contact Us</a>
+
+    </div>
+
+    <p class="copyright">
+      &copy; <span class="date">&nbsp;</span> Tech Masters Studio All Rights Reserved.
+    </p>
+  </footer>
+
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+
+  <div class="elfsight-app-90cd7430-0e1d-4abe-a173-fc9950f79185" data-elfsight-app-lazy></div>
+
+
+  <script src="public/assests/javascript/script.js"></script>
 </body>
 
 </html>
